--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>509</width>
-    <height>537</height>
+    <width>719</width>
+    <height>748</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,16 +19,16 @@
      <rect>
       <x>10</x>
       <y>0</y>
-      <width>491</width>
-      <height>171</height>
+      <width>691</width>
+      <height>391</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>390</y>
+      <x>490</x>
+      <y>590</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -40,8 +40,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>420</y>
+      <x>490</x>
+      <y>630</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -54,8 +54,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>190</y>
-      <width>491</width>
+      <y>400</y>
+      <width>691</width>
       <height>171</height>
      </rect>
     </property>
@@ -63,11 +63,24 @@
    <widget class="QGraphicsView" name="graphicsView_3">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>370</y>
-      <width>256</width>
+      <x>15</x>
+      <y>580</y>
+      <width>461</width>
       <height>91</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>630</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Train On/Off</string>
     </property>
    </widget>
   </widget>
@@ -76,7 +89,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>509</width>
+     <width>719</width>
      <height>26</height>
     </rect>
    </property>
